# vcf_qc

./: .gitignore  LICENSE  README.md  demo_new_features.py  example_usage.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_qc.py  debug_sample_plots.py  genotype_qc.py  site_qc.py
tests/: __init__.py  test_io.py  test_plots.py
useful_scripts/: Add_GQ_from_PL.py  vcf_subsample.py
vcf_qc/: __init__.py  cli.py  utils.py
vcf_qc/core/: __init__.py
vcf_qc/io/: __init__.py  vcf_reader.py
vcf_qc/metrics/: __init__.py  genotype_metrics.py  sample_metrics.py  site_metrics.py
vcf_qc/plot/: __init__.py  base.py  genotype_plots.py  sample_plots.py  site_plots.py
