#############################
# vcf_qc packaging metadata #
#############################

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcf_qc"
version = "0.1.0"
description = "Modular toolkit for VCF quality control metrics & plots (sample / site / genotype)."
readme = "README.md"
license = {text = "MIT"}
authors = [
	{name = "Zihao Huang", email = "zh384@cam.ac.uk"}
]
requires-python = ">=3.9"
dependencies = [
	"numpy>=1.23",
	"pandas>=1.5",
	"matplotlib>=3.6",
	"seaborn>=0.12",
	"scipy>=1.9",
]

[project.optional-dependencies]
cluster = ["scikit-learn>=1.2"]
dev = [
	"pytest>=7",
	"scikit-learn>=1.2",
	"ruff>=0.5.0",
	"mypy>=1.4",
]

[project.scripts]
vcf_qc = "vcf_qc.cli:main"

[project.urls]
Homepage = "https://github.com/BioJoe-Hzh/vcf_qc/tree/main/vcf_qc"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
vcf_qc = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
ignore_missing_imports = true
